// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser variable declarations parses evaluated value assignments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "value": Binary {
      "left": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 5,
        },
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 3,
        },
      },
      "token": Object {
        "isReserved": false,
        "kind": 6,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": undefined,
      },
    },
  },
]
`;

exports[`parser variable declarations parses literal value assignments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "value": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 5,
      },
    },
  },
]
`;

exports[`parser variable declarations parses variable aliasing 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "baz",
    },
    "value": Variable {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
  },
]
`;
